# filthy-rich

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mise.toml  rust-toolchain.toml
.github/workflows/: clippy.yml  lints.yml  release.yml
.gram/: tasks.jsonc
examples/: disconnect.rs  indefinite-sync.rs  indefinite.rs  simple.rs  timed-sync.rs  timed.rs
scripts/: check-lint.sh
src/: activitytypes.rs  client.rs  errors.rs  ipc.rs  lib.rs  macros.rs  runner.rs  socket.rs  types.rs  utils.rs
src/types/: activity.rs  builder.rs  data.rs  mod.rs  payloads.rs  rpc.rs  user.rs
tools/: licenser.py
