[package]
name = "filthy-rich"
description = "Tiny, ergonomic Discord Rich Presence library for your apps."
authors = ["Anindya Shiddhartha <@hitblast>"]
repository = "https://github.com/hitblast/filthy-rich"
version = "0.6.1"
edition = "2021"
license = "MIT"
keywords = ["discord", "discord", "rich-presence", "ipc", "rpc"]
categories = ["development-tools"]
rust-version = "1.82.0"

[lib]
name = "filthy_rich"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
unreachable = "deny"
must_use_candidate = "warn"

[lints.rust]
unused_must_use = "deny"

[profile.release]
lto = "thin"
